Added footnotes for chapter 1

--- a/content/thesis.html
+++ b/content/thesis.html
@@ -31,11 +31,41 @@
           <h2>Table of Contents</h2>
           <a href="#abstract">Abstract</a>
           <a href="#introduction">Introduction</a>
-          <a href="#chapter-one">Chapter 1. Dasein as Being-with</a>
+          <a href="#chapter-one">Chapter 1. Dasein as Being-With</a>
           <a href="#chapter-two">Chapter 2. Impossibility of Knowing the Other</a>
           <a href="#chapter-three">Chapter 3. Possibility of the Impossible</a>
           <a href="#bibliography">Bibliography</a>
           <a href="#vita">Vita</a>
+        </div>
+        <div class="footnotes">
+          <h2>Notes:</h2>
+          <ol>
+            <li id="footnote1">Pierre Livet, “Mitsein et intersubjectivité”, in « <em>Être et temps » de Martin Heidegger : Questions de méthode et voies de recherche</em>, ed. Jean-Pierre Cometti and Dominique Janicaud (Marseille: Sud, 1989), 164. “Pour Heidegger, l’ouverture de l’Être est première. Pour une pensée de l’intersubjectivité et de l’interprétation, la question de l’Être se pose en route…”, translation my own.</li>
+            <li id="footnote2">Hadrien France-Lanord, “Martin Heidegger et la question de l’autre: II. Le partage de l’être”, <em>Heidegger Studies</em> 21 (2005): 130.</p>
+            <li id="footnote3">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 26.</li>
+            <li id="footnote4">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 27.</li>
+            <li id="footnote5">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 32.</li>
+            <li id="footnote6">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 33.</li>
+            <li id="footnote7">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 33.</li>
+            <li id="footnote8">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 33.</li>
+            <li id="footnote9">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 99.</li>
+            <li id="footnote10">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 116.</li>
+            <li id="footnote11">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 101.</li>
+            <li id="footnote12">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 97.</li>
+            <li id="footnote13">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 97.</li>
+            <li id="footnote14">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 149.</li>
+            <li id="footnote15">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 153.</li>
+            <li id="footnote16">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 154.</li>
+            <li id="footnote17">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 154.</li>
+            <li id="footnote18">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 154.</li>
+            <li id="footnote19">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 155.</li>
+            <li id="footnote20">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 154–155.</li>
+            <li id="footnote21">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 156–157.</li>
+            <li id="footnote22">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 160.</li>
+            <li id="footnote23">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 160.</li>
+            <li id="footnote24">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 161.</li>
+            <li id="footnote25">Pierre Livet, “Mitsein et intersubjectivité”, in « <em>Être et temps » de Martin Heidegger : Questions de méthode et voies de recherche</em>, ed. Jean-Pierre Cometti and Dominique Janicaud (Marseille: Sud, 1989), 159. “…le Mitsein est seulement ce qui fait de mon monde un monde commun, donc qui fait des êtres de ce monde des êtres partagés. Mais il ne définit nullement le rapport spécifique à l’autre”. Translation my own.</li>
+          </ol>
         </div>
         <div id="thesis">
           <h1>THE POSSIBILITY OF RELATIONSHIPS WITH OTHERS</h1>
@@ -68,7 +98,7 @@
           <p>In order to overcome this paradoxical relationship, I will turn to Derrida whose ideas will, I think, be able to allow us to escape the aforementioned paradox without sacrificing Levinas’s ethics. It will also allow us to recognize more clearly the value of Heidegger’s ontology and the place it has within an ethical structure between others. I think this is important because in order to make sure that relationships can exist authentically, I think it necessary to retain this ethics of hospitality. Doing this will involve using Derrida’s notion of the event to reverse the paradox such that only insofar as the relationship between someone and an other is impossible, is it possible.</p>
 
           <h2 id="chapter-one">Chapter 1. Dasein as Being-With</h2>
-          <p>Before any meaningful inquiry into the possibility of an authentic, ethical relationship with the Other can be made, questions must first be asked about the nature of Being. Since I would like to understand the way everyday relationships ought to function in an ethical and authentic fashion, I first need an understanding of the kind of beings that are implicitly involved in these relational structures. Heidegger, I think, naturally leads us to the ideas of interest while also providing an indispensable foundation from which to work. I think this works well since, as noted by Pierre Livet, “For Heidegger, the opening of Being is primary. To think of intersubjectivity and of interpretation, the question of Being is asked along the way”.1 Being, then, must be understood because without an understanding of how Dasein comes to understand its Being as Being-with, an inquiry into the very nature of the Being-with structure cannot take place.</p>
+          <p>Before any meaningful inquiry into the possibility of an authentic, ethical relationship with the Other can be made, questions must first be asked about the nature of Being. Since I would like to understand the way everyday relationships ought to function in an ethical and authentic fashion, I first need an understanding of the kind of beings that are implicitly involved in these relational structures. Heidegger, I think, naturally leads us to the ideas of interest while also providing an indispensable foundation from which to work. I think this works well since, as noted by Pierre Livet, “For Heidegger, the opening of Being is primary. To think of intersubjectivity and of interpretation, the question of Being is asked along the way”.<span id="note1" class="notes">1</span> Being, then, must be understood because without an understanding of how Dasein comes to understand its Being as Being-with, an inquiry into the very nature of the Being-with structure cannot take place.</p>
           <p>Specifically, I am concerned with the primordial situation that Dasein finds itself in, and what that situation says about the nature of the way it interacts with the world. I think what this discussion should reveal first and foremost is that, as is also argued by Hadrien France-Lanord, the structure of the Being-with eliminates a solipsistic concern and places us firmly and necessarily in the world with others.2 This chapter will involve, then, an exegesis of what it means to be Dasein, what Dasein’s relationship with the world is, and particularly, what Dasein’s relationship with others is and the nature of the Being-with structure.</p>
           <p>	The need for the term ‘Dasein’ comes out of a question about the meaning of ‘Being’ which is an essential component of the Being-with structure that is most relevant for the larger discussion being had here. For Heidegger, Being is not an entity that something possesses, but rather that Being “lies in the fact that something is, and in its Being as it is; in Reality; in presence-at-hand; in subsistence; in validity; in Dasein; in the ‘there is’”.3 In order to understand this description of Being that Heidegger offers it will be best to get an understanding of the many technical terms Heidegger uses. Particularly, I think, an understanding of what is meant by “Dasein” is needed. For Heidegger, this entity will have to be something that has also been made clear in its Being, and this is what is referred to as Dasein.</p>
           <p>Dasein is defined by its special relationship to Being, and in fact gets its nature of Being by virtue of asking the very question of what Being is. Heidegger says, “The very asking of this question is an entity’s mode of Being; and as such it gets its essential character from what is inquired about—namely, Being”.4 As just mentioned, this means that this special entity, Dasein, discovers its meaning of Being precisely by inquiring into what Being is. Thus, Dasein is a term that refers to an entity which, in the very fact that it takes interest in its own existence, gets its meaning of Being.</p>
@@ -150,51 +180,29 @@
 
           <h2 id="bibliography">Bibliography</h2>
           <div class="hanging">
-            <p>Bloechl, Jeffrey. “Words of Welcome: Hospitality in the Philosophy of Emmanuel Levinas”. Phenomenologies of the Stranger: Between Hostility and Hospitality. Edited by Richard Kearney and Kascha Semonovitch, 232–241. New York: Fordham University Press, 2011.</p>
-
-            <p>Davis, Colin. Levinas: An Introduction. Indiana: Notre Dame Press, 2007.</p>
-
-            <p>Derrida, Jacques. “A Certain Impossible Possibility of Saying the Event”. Critical Inquiry 33, no. 2 (2007): 441–61.</p>
-
-            <p>Derrida, Jacques. Acts of Religion. Edited by Gil Anidjar. New York: Routledge, 2010.</p>
-
-            <p>Derrida, Jacques. Adieu to Emmanuel Levinas. Translated by Pascale-Anne Brault and Michael Naas. Stanford: Stanford University Press, 1999.</p>
-
-            <p>Derrida, Jacques. “Hospitality, Justice and Responsibility: a Dialogue with Jacques Derrida,” Questioning Ethics Contemporary Debates in Philosophy. Edited by Richard Kearney and Mark Dooley. London: Routledge, 1999.</p>
-
-            <p>Derrida, Jacques. Paper Machine. Translated by Rachel Bowlby. Stanford: Stanford University Press, 2005.</p>
-
-            <p>Derrida, Jacques. The Animal That Therefore I Am. Edited by Marie-Louise Mallet. New York: Fordham University Press, 2010.</p>
-
-            <p>Eubanks, Cecil L. and Gauthier, David J. “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”. History of Political Thought 32, no. 1 (2001): 125–146.</p>
-
-            <p>France-Lanord, Hadrien. “Martin Heidegger et la question de l’autre : II. Le partage de l’être”. Heidegger Studies 21 (2005): 111–131.</p>
-
-            <p>Guenther, Lisa. “Le Flair Animal: Levinas and the Possibility of Animal Friendship”. PhaenEx 2, no. 2 (2007): 216–238.</p>
-
-            <p>Heidegger, Martin. Being and Time. Translated by John Macquarrie and Edward Robinson. New York: Harper & Row, 1962.</p>
-
-            <p>Kearney, Richard and Semonovitch, Kascha. “At the Threshold”. In Phenomenologies of the Stranger: Between Hostility and Hospitality, eds. Richard Kearney and Kascha Semonovitch, 3–29. New York: Fordham University Press, 2011.</p>
-
-            <p>Levinas, Emmanuel. Entre Nous. Translated by Michael B. Smith and Barbara Harshav. New York: Columbia University Press, 1998.</p>
-
-            <p>Levinas Emmanuel. Éthique et infini. Paris: Le Livre de Poche, 1984.</p>
-
-            <p>Levinas, Emmanuel, and Philippe Nemo. Ethics and Infinity: Conversations with Philippe Nemo. Translated by Richard A. Cohen. Pennsylvania: Duquesne University Press, 2011.</p>
-
-            <p>Levinas, Emmanuel. Otherwise than Being. Translated by Alphonso Lingis. Pennsylvania: Duquesne University Press, 1998.</p>
-
-            <p>Levinas, Emmanuel. Totality and Infinity: An Essay on Exteriority. Translated by Alphonso Lingis. Pennsylvania: Duquesne University Press, 2003.</p>
-
-            <p>Livet, Pierre. “Mitsein et intersubjectivité”, in « Être et temps » de Martin Heidegger : Questions de méthode et voies de recherche, ed. Jean-Pierre Cometti and Dominique Janicaud, 151–165. Marseille: Sud, 1989.</p>
-
-            <p>Raffoul, François. “Being and the Other: Ethics and Ontology in Levinas and Heidegger”. In Addressing Levinas, edited by Eric Sean Nelson, Antje Kapust, and Kent Still, 138–151. Illinois: Northwestern University Press, 2005.</p>
-
-            <p>Raffoul François. “Derrida and the Ethics of the Im-possible”. Research in Phenomenology 38, no. 2 (2008): 270–290.</p>
-
-            <p>Raffoul François. The Origins of Responsibility. Indiana: Indiana University Press, 2010.</p>
-
-            <p>Raffoul, François. “The Subject of the Welcome: On Jacques Derrida’s Adieu à Emmanuel Levinas”. Symposium 2, no. 2 (1998): 211–222.</p>
+            <p>Bloechl, Jeffrey. “Words of Welcome: Hospitality in the Philosophy of Emmanuel Levinas”. <em>Phenomenologies of the Stranger: Between Hostility and Hospitality</em>. Edited by Richard Kearney and Kascha Semonovitch, 232–241. New York: Fordham University Press, 2011.</p>
+            <p>Davis, Colin. <em>Levinas: An Introduction</em>. Indiana: Notre Dame Press, 2007.</p>
+            <p>Derrida, Jacques. “A Certain Impossible Possibility of Saying the Event”. <em>Critical Inquiry</em> 33, no. 2 (2007): 441–61.</p>
+            <p>Derrida, Jacques. <em>Acts of Religion</em>. Edited by Gil Anidjar. New York: Routledge, 2010.</p>
+            <p>Derrida, Jacques. <em>Adieu to Emmanuel Levinas</em>. Translated by Pascale-Anne Brault and Michael Naas. Stanford: Stanford University Press, 1999.</p>
+            <p>Derrida, Jacques. “Hospitality, Justice and Responsibility: a Dialogue with Jacques Derrida,” <em>Questioning Ethics Contemporary Debates in Philosophy</em>. Edited by Richard Kearney and Mark Dooley. London: Routledge, 1999.</p>
+            <p>Derrida, Jacques. <em>Paper Machine</em>. Translated by Rachel Bowlby. Stanford: Stanford University Press, 2005.</p>
+            <p>Derrida, Jacques. <em>The Animal That Therefore I Am</em>. Edited by Marie-Louise Mallet. New York: Fordham University Press, 2010.</p>
+            <p>Eubanks, Cecil L. and Gauthier, David J. “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”. <em>History of Political Thought</em> 32, no. 1 (2001): 125–146.</p>
+            <p>France-Lanord, Hadrien. “Martin Heidegger et la question de l’autre : II. Le partage de l’être”. <em>Heidegger Studies</em> 21 (2005): 111–131.</p>
+            <p>Guenther, Lisa. “Le Flair Animal: Levinas and the Possibility of Animal Friendship”. <em>PhaenEx</em> 2, no. 2 (2007): 216–238.</p>
+            <p>Heidegger, Martin. <em>Being and Time</em>. Translated by John Macquarrie and Edward Robinson. New York: Harper & Row, 1962.</p>
+            <p>Kearney, Richard and Semonovitch, Kascha. “At the Threshold”. In <em>Phenomenologies of the Stranger: Between Hostility and Hospitality</em>, eds. Richard Kearney and Kascha Semonovitch, 3–29. New York: Fordham University Press, 2011.</p>
+            <p>Levinas, Emmanuel. <em>Entre Nous</em>. Translated by Michael B. Smith and Barbara Harshav. New York: Columbia University Press, 1998.</p>
+            <p>Levinas Emmanuel. <em>Éthique et infini</em>. Paris: Le Livre de Poche, 1984.</p>
+            <p>Levinas, Emmanuel, and Philippe Nemo. <em>Ethics and Infinity: Conversations with Philippe Nemo</em>. Translated by Richard A. Cohen. Pennsylvania: Duquesne University Press, 2011.</p>
+            <p>Levinas, Emmanuel. <em>Otherwise than Being</em>. Translated by Alphonso Lingis. Pennsylvania: Duquesne University Press, 1998.</p>
+            <p>Levinas, Emmanuel. <em>Totality and Infinity: An Essay on Exteriority</em>. Translated by Alphonso Lingis. Pennsylvania: Duquesne University Press, 2003.</p>
+            <p>Livet, Pierre. “Mitsein et intersubjectivité”, in <em>« Être et temps » de Martin Heidegger : Questions de méthode et voies de recherche</em>, ed. Jean-Pierre Cometti and Dominique Janicaud, 151–165. Marseille: Sud, 1989.</p>
+            <p>Raffoul, François. “Being and the Other: Ethics and Ontology in Levinas and Heidegger”. In <em>Addressing Levinas</em>, edited by Eric Sean Nelson, Antje Kapust, and Kent Still, 138–151. Illinois: Northwestern University Press, 2005.</p>
+            <p>Raffoul François. “Derrida and the Ethics of the Im-possible”. <em>Research in Phenomenology</em> 38, no. 2 (2008): 270–290.</p>
+            <p>Raffoul François. The <em>Origins of Responsibility</em>. Indiana: Indiana University Press, 2010.</p>
+            <p>Raffoul, François. “The Subject of the Welcome: On Jacques Derrida’s Adieu à Emmanuel Levinas”. <em>Symposium</em> 2, no. 2 (1998): 211–222.</p>
           </div>
 
           <h2 id="vita">Vita</h2>
