--- a/content/cv.html
+++ b/content/cv.html
@@ -20,6 +20,11 @@
           <p>« J’existe par ce que je pense… et je ne peux pas m’empêcher de penser. » - <em>Jean Paul Sartre</em></p>
         </div>
       </div>
+      <div class="navigation">
+        <a href="index.html">home</a>
+        <a href="content/cv.html">cv</a>
+        <a href="content/thesis.html">thesis</a>
+      </div>
     
       <div class="article">
         <div class="sidebar">
