Fixed bad links in navbar

--- a/content/thesis.html
+++ b/content/thesis.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="navigation">
-        <a href="index.html">home</a>
+        <a href="../index.html">home</a>
         <a href="content/cv.html">cv</a>
         <a href="content/thesis.html">thesis</a>
       </div>
