--- a/content/cv.html
+++ b/content/cv.html
@@ -21,9 +21,9 @@
         </div>
       </div>
       <div class="navigation">
-        <a href="index.html">home</a>
-        <a href="content/cv.html">cv</a>
-        <a href="content/thesis.html">thesis</a>
+        <a href="../index.html">home</a>
+        <a href="cv.html">cv</a>
+        <a href="thesis.html">thesis</a>
       </div>
     
       <div class="article">
