Added links to other projects on sidebar

--- a/content/cv.html
+++ b/content/cv.html
@@ -32,6 +32,8 @@
           <a href="../index.html">home</a>
           <a href="cv.html">cirriculum vitae</a>
           <a href="thesis.html">master's thesis</a>
+          <a href="https://www.joshuaseverud.com/rock-paper-scissors/">rock paper scissors</a>
+          <a href="https://www.brookstock.net/">minecraft</a>
         </div>
         <div class="paper">
           <div class="cv-head">
