--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
           <a href="index.html">home</a>
           <a href="content/cv.html">cirriculum vitae</a>
           <a href="content/thesis.html">master's thesis</a>
+          <a href="https://www.joshuaseverud.com/rock-paper-scissors/">rock paper scissors</a>
+          <a href="https://www.brookstock.net/">minecraft</a>
         </div>
         <div id="about">
           <div class="profile">
