Continued work on style. Changed header/sidebar
This cleans up the design and improves usability.

--- a/index.html
+++ b/index.html
@@ -15,30 +15,17 @@
   <body>
     <div class="viewport">
       <div id="header">
-        <div class="titles">
-          <h1>Joshua Severud</h1>
-          <p>« J’existe par ce que je pense… et je ne peux pas m’empêcher de penser. » - <em>Jean Paul Sartre</em></p>
-        </div>
-      </div>
-      <div class="navigation">
-        <a href="index.html">home</a>
-        <a href="content/cv.html">cv</a>
-        <a href="content/thesis.html">thesis</a>
-      </div>
-
-      <div class="article">
-        <div class="sidebar">
-          <h2>Table of Contents</h2>
-          <a href="#about">about</a>
+        <h1 id="title">Joshua Severud</h1>
+        <div class="navigation">
+          <a href="index.html">home</a>
           <a href="#experience">experience</a>
           <a href="#education">education</a>
-          <a href="#miscellaneous">miscellaneous</a>
-          <br>
-          <h2>Quick Links</h2>
-          <a href="index.html">home</a>
           <a href="content/cv.html">cirriculum vitae</a>
           <a href="content/thesis.html">master's thesis</a>
         </div>
+      </div>
+
+      <div class="article">
         <div id="about">
           <div class="profile">
             <img src="static/images/profile.webp" alt="picture of me">
