Added gradient to header
This improves appearance

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="article">
         <div id="about">
           <div class="profile">
-            <img src="static/images/profile.webp" alt="picture of me">
+            <img class="shadow" src="static/images/profile.webp" alt="picture of me">
           </div>
           <div class="about-text">
             <h2>About me</h2>
