Arranged heading for better alignment with body
Also adjusted stylesheet locations on thesis and cv for better workflow.
I could set up a local web server but I cannot be bothered to for the
moment.

--- a/content/writing/thesis.html
+++ b/content/writing/thesis.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua Severud | Master's Thesis</title>
     <link rel="icon" href="/static/fav.png" type="image/gif">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
           <h2>Notes:</h2>
           <ol>
             <li id="footnote1">Pierre Livet, “Mitsein et intersubjectivité”, in « <em>Être et temps » de Martin Heidegger : Questions de méthode et voies de recherche</em>, ed. Jean-Pierre Cometti and Dominique Janicaud (Marseille: Sud, 1989), 164. “Pour Heidegger, l’ouverture de l’Être est première. Pour une pensée de l’intersubjectivité et de l’interprétation, la question de l’Être se pose en route…”, translation my own.</li>
-            <li id="footnote2">Hadrien France-Lanord, “Martin Heidegger et la question de l’autre: II. Le partage de l’être”, <em>Heidegger Studies</em> 21 (2005): 130.</p>
+            <li id="footnote2">Hadrien France-Lanord, “Martin Heidegger et la question de l’autre: II. Le partage de l’être”, <em>Heidegger Studies</em> 21 (2005): 130.</li>
             <li id="footnote3">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 26.</li>
             <li id="footnote4">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 27.</li>
             <li id="footnote5">Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 32.</li>
