--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <body>
     <div class="viewport">
       <div id="header">
-        <h1 id="title">Joshua Severud</h1>
+        <h1 id="title"><a href="index.html">Joshua Severud</a></h1>
         <div class="navigation">
-          <a href="index.html">home</a>
-          <a href="content/resume/cv.html">cirriculum vitae</a>
-          <a href="content/writing/thesis.html">master's thesis</a>
+          <a href="index.html">Home</a>
+          <a href="content/writing/thesis.html">Writing</a>
+          <a href="content/resume/cv.html">About</a>
         </div>
       </div>
 
@@ -44,7 +44,7 @@
           <a href="https://www.gnu.org/licenses/gpl-3.0.html#license-text" target="_blank">GNU GPLv3</a>
         </div>
         <div class="credit">
-          <p>made from scratch</p>
+          <p>Joshua Severud</p>
           <a href="https://github.com/forkentiney/" target="_blank"><img class="icon" src="static/images/icons/github-mark-white.svg" alt="Github"></a>
         </div>
         <div class="contact">
