Changed relative links and styled headers.
Added also javascript file for footnotes. Not started yet; will need to
figure out how to do all the footnotes in a loop. That would be best.

--- a/content/resume/cv.html
+++ b/content/resume/cv.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua Severud | Curriculum Vitae</title>
+    <script src="../../script.js" defer></script>
     <link rel="icon" href="/static/fav.png" type="image/gif">
     <link rel="stylesheet" href="../../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,25 +16,16 @@
   <body>
     <div class="viewport">
       <div id="header">
-        <div class="titles">
-          <h1>Joshua Severud</h1>
-          <p>« J’existe par ce que je pense… et je ne peux pas m’empêcher de penser. » - <em>Jean Paul Sartre</em></p>
+        <h1 id="title"><a href="index.html">Joshua Severud</a></h1>
+        <div class="navigation">
+          <a href="../../index.html">Home</a>
+          <a href="../writing/thesis.html">Writing</a>
+          <a href="cv.html">About</a>
         </div>
-      </div>
-      <div class="navigation">
-        <a href="/index.html">home</a>
-        <a href="/content/resume/cv.html">cv</a>
-        <a href="/content/writing/thesis.html">thesis</a>
       </div>
     
       <div class="article">
-        <div class="sidebar">
-          <h2>Quick Links</h2>
-          <a href="../index.html">home</a>
-          <a href="cv.html">cirriculum vitae</a>
-          <a href="thesis.html">master's thesis</a>
-        </div>
-                <h2 id="section-title">Experience</h2>
+        <h2 id="section-title">Experience</h2>
         <div id="experience">
           <div class="card">
             <h3>Adjunct Lecturer</h3>
