--- a/content/resume/cv.html
+++ b/content/resume/cv.html
@@ -27,31 +27,31 @@
       <div class="article">
         <h2 id="section-title">Experience</h2>
         <div id="experience">
-          <div class="card">
+          <div class="card shadow">
             <h3>Adjunct Lecturer</h3>
             <p>at Minot State University</p>
             <p class="fade">Fall 2025 - Present</p>
             <p>I am teaching philosophy online at Minot State University. I teach ethics and introdouction to philosophy.</p>
           </div>
-          <div class="card">
+          <div class="card shadow">
             <h3>Substitute Teacher</h3>
             <p>at Grand Forks Public Schools</p>
             <p class="fade">October 2024 - Present</p>
             <p>After some family health issues arose, I returned to the U.S. to work as a substitute teacher and prepare my PhD applications. I worked filling in daily as needed, but also worked a couple long-term positions (greater than 20 consecutive days for the same teacher) where I was allowed to teach the course using class material. As a long-term sub I taught engineering, worked in special education, and taught business education.</p>
           </div>
-          <div class="card">
+          <div class="card shadow">
             <h3>English Teacher</h3>
             <p>at PLATO</p>
             <p class="fade">March 2024 - July 2024</p>
             <p>After working for six months in South Korea I changed my place of work to give myself more time to work on my interests in philosophy (and computers). At Plato English School I was responsible for four classes: two kindergarten classes during the morning hours of each regular working day, one first grade elementary class four days a week, and a fifth grade elementary class two days a week. I was responsible for designing lesson plans for each day that could incorporate all the teaching goals as defined in the school’s curriculum. Additionally, I created calendars and chose certain materials to be used in class. Notably, the older students that I taught were able to have debates where I used the skills I learned from studying philosophy to encourage, enrich, and push students further while debating each other.</p>
           </div>
-          <div class="card">
+          <div class="card shadow">
             <h3>English Teacher</h3>
             <p>at WILS</p>
             <p class="fade">September 2023 - February 2024</p>
             <p>When I arrieved in South Korea I started work at WILS Lanugage School. At WILS, I designed and managed courses while teaching students at a variety of different levels and ages (from 10 to 16 with the majority of my work being with students somewhere in the middle of that range). I was also involved in various administrative tasks including website maintenance, acting as a hiring manager, and brokering a number of external deals (e.g., franchising, tutoring partnerships).</p>
           </div>
-          <div class="card">
+          <div class="card shadow">
             <h3>Adjunct Lecturer</h3>
             <p>at Louisiana State University</p>
             <p class="fade">Fall 2022</p>
@@ -60,74 +60,25 @@
         </div>
         <h2 id="section-title">Education</h2>
         <div id="education">
-          <div class="card">
+          <div class="card shadow">
             <h3>Master of Philosophy</h3>
             <p>Louisiana State University</p>
             <p class="fade">Fall 2021 - Spring 2023</p>
             <p class="fade">GPA: <em>4.0 of 4.0</em></p>
             <p>At LSU I focused on 19th and 20th century French thought and as such worked with Dr. François Raffoul on my thesis. I was able to better explore my interests in interpersonal relationships and ethics. I focused my attention on Levinas’s ethics, Heidegger’s ontology, and Derrida’s event. My thesis was called “The Possibility of Relationships with Others”. Additionally, while completing my master’s I also worked as a GTA which meant that I was responsible for grading students’ work and taking attendance. I also helped to teach some classes, and learned a lot from the experience.</p>
           </div>
-          <div class="card">
+          <div class="card shadow">
             <h3>Language Program</h3>
             <p>Université Catholique de Lyon</p>
             <p class="fade">Spring 2021 - Summer 2021</p>
             <p>At UCLy, I studied French in order to jump-start my language ability before graduate school. I achieved a language level of B1, but have continued improving since.</p>
           </div>
-          <div class="card">
+          <div class="card shadow">
             <h3>Bachelor of Arts</h3>
             <p>University of North Dakota</p>
             <p class="fade">Fall 2017 - Fall 2020</p>
             <p class="fade">GPA: <em>3.612 of 4.0</em></p>
             <p>At UND I discovered philosophy and explored my interests in my English classes. I double majored in philosophy and English, the focus of the latter being English literature (as opposed to American literature).</p>
-          </div>
-        </div>
-        <div class="paper">
-          <div class="cv-head">
-            <div class="titles">
-              <h2>Joshua Severud, M.A.</h2>
-            </div>
-            <div class="contact">
-              <a href="mailto:contact@joshuaseverud.com">contact@joshuaseverud.com</a>
-            </div>
-          </div>
-          <div class="cv-section">
-            <h3>Experience</h3>
-            <p>Adjunct Lecturer, Minot State University (Fall 2025-Present)</p>
-            <p>Substitute Teacher, Grand Forks Public Schools (September 2024-Present)</p>
-            <p>English as a Foreign Language Teacher, Seoul, South Korea (September 2023-July 2024)</p>
-            <p>Adjunct Lecturer, Louisiana State University (Fall 2022)</p>
-            <p>Graduate Teaching Assistant, Louisiana State University (Fall 2021-Spring 2023)</p>
-            <p>Teaching Assistant, University of North Dakota (Fall 2020)</p>
-          </div>
-          <div class="cv-section">
-            <h3>Education</h3>
-            <p>M.A., Philosophy, Louisiana State Unviersity (May 2023)</p>
-            <p>Language Program, French, Université Catholique de Lyon (July 2021)</p>
-            <p>B.A., Philosophy & English, University of North Dakota (December 2020)</p>
-          </div>
-          <div class="cv-section">
-            <h3>Language Ability</h3>
-            <p>English, native</p>
-            <p>French, CEFR B1</p>
-          </div>
-          <div class="cv-section">
-            <h3>Honors and Awards</h3>
-            <p>Graduate Teaching Assistantship (2021)</p>
-            <p>Gerald Potter Scholarship (2020)</p>
-            <p>K&B Tiffany Scholarship (2020)</p>
-            <p>UND Academic Achievement Scholarship (2017)</p>
-            <p>ND Academic Scholarship(2017)</p>
-            <p>CompTIA IT Essentials 3rd Place Prize (2016)</p>
-          </div>
-          <div class="cv-section">
-            <h3>Interests</h3>
-            <p>Linux administration/systems</p>
-            <p>Open-source software</p>
-            <p>Computer hardware</p>
-            <p>Networking</p>
-            <p>Intersubjectivity and ethics</p>
-            <p>Existentialism and phenomenology (esp. freedom)</p>
-            <p>Postmodernism (e.g., Baudrillard)</p>
           </div>
         </div>
       </div>
@@ -139,14 +90,14 @@
         </div>
         <div class="credit">
           <p>made from scratch</p>
-          <a href="https://github.com/forkentiney/" target="_blank"><img class="icon" src="../static/images/icons/github-mark-white.svg" alt="Github"></a>
+          <a href="https://github.com/forkentiney/" target="_blank"><img class="icon" src="../../static/images/icons/github-mark-white.svg" alt="Github"></a>
         </div>
         <div class="contact">
           <p>find me other places</p>
           <div class="socials">
-            <a href="https://www.linkedin.com/in/joshua-severud-389014164" target="_blank"><img class="icon" src="../static/images/icons/InBug-White.png" alt="LinkedIn"></a>
-            <a href="https://letterboxd.com/Forkentiney/" target="_blank"><img class="icon" src="../static/images/icons/letterboxd-white.svg" alt="Letterboxd"></a>
-            <a href="https://listenbrainz.org/user/Forkentiney" target="_blank"><img class="icon" src="../static/images/icons/listenbrainz-color.svg" alt="ListenBrainz"></a>
+            <a href="https://www.linkedin.com/in/joshua-severud-389014164" target="_blank"><img class="icon" src="../../static/images/icons/InBug-White.png" alt="LinkedIn"></a>
+            <a href="https://letterboxd.com/Forkentiney/" target="_blank"><img class="icon" src="../../static/images/icons/letterboxd-white.svg" alt="Letterboxd"></a>
+            <a href="https://listenbrainz.org/user/Forkentiney" target="_blank"><img class="icon" src="../../static/images/icons/listenbrainz-color.svg" alt="ListenBrainz"></a>
           </div>
         </div>
       </div>
