--- a/content/writing/thesis.html
+++ b/content/writing/thesis.html
@@ -205,15 +205,15 @@
           <a href="https://www.gnu.org/licenses/gpl-3.0.html#license-text" target="_blank">GNU GPLv3</a>
         </div>
         <div class="credit">
-          <p>made from scratch</p>
-          <a href="https://github.com/forkentiney/" target="_blank"><img class="icon" src="../static/images/icons/github-mark-white.svg" alt="Github"></a>
+          <p>Joshua Severud</p>
+          <a href="https://github.com/forkentiney/" target="_blank"><img class="icon" src="../../static/images/icons/github-mark-white.svg" alt="Github"></a>
         </div>
         <div class="contact">
           <p>find me other places</p>
           <div class="socials">
-            <a href="https://www.linkedin.com/in/joshua-severud-389014164" target="_blank"><img class="icon" src="../static/images/icons/InBug-White.png" alt="LinkedIn"></a>
-            <a href="https://letterboxd.com/Forkentiney/" target="_blank"><img class="icon" src="../static/images/icons/letterboxd-white.svg" alt="Letterboxd"></a>
-            <a href="https://listenbrainz.org/user/Forkentiney" target="_blank"><img class="icon" src="../static/images/icons/listenbrainz-color.svg" alt="ListenBrainz"></a>
+            <a href="https://www.linkedin.com/in/joshua-severud-389014164" target="_blank"><img class="icon" src="../../static/images/icons/InBug-White.png" alt="LinkedIn"></a>
+            <a href="https://letterboxd.com/Forkentiney/" target="_blank"><img class="icon" src="../../static/images/icons/letterboxd-white.svg" alt="Letterboxd"></a>
+            <a href="https://listenbrainz.org/user/Forkentiney" target="_blank"><img class="icon" src="../../static/images/icons/listenbrainz-color.svg" alt="ListenBrainz"></a>
           </div>
         </div>
       </div>
