Started work on portfolio page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <a href="index.html">Home</a>
           <a href="content/writing/thesis.html">Writing</a>
           <a href="content/resume/cv.html">About</a>
+          <a href="content/portfolio/portfolio.html">Web</a>
         </div>
       </div>
 
