Continued work on portfolio page

--- a/content/portfolio/portfolio.html
+++ b/content/portfolio/portfolio.html
@@ -26,40 +26,21 @@
       </div>
 
       <div class="article">
-        <h2 id="section-title">Things I've Built</h2>
-        <a href="https://www.joshuaseverud.com/rock-paper-scissors/" target="_blank" type="button">
-          <div class="card shadow">
-            <h3>Rock Paper Scissors</h3>
-            <div id="scissors" class="ascii button">
-              <p>                        @#####@                   </p>
-              <p>                      @###@@@## #                 </p>
-              <p>                     ##@#@    @# @                </p>
-              <p>                    @#@#     @# #                 </p>
-              <p>                   @#@#     @#.#          @@@@    </p>
-              <p>                   @##     @###        #########@ </p>
-              <p>                   ###    ###@       ####@#@ @##.@</p>
-              <p>                   @##%@####@      @###@#      @ #</p>
-              <p>                    #######@     @###@#       @ # </p>
-              <p>                    ######@    @###@#       @# #  </p>
-              <p>                    ######  @@#####      @#.##@   </p>
-              <p>                    ###@@  @###############@      </p>
-              <p>                    ===@@@#############@          </p>
-              <p>                   @@=@=++###@@                   </p>
-              <p>                @+@=@@%@+@                        </p>
-              <p>              +++@=====                           </p>
-              <p>           @+++++===-=                            </p>
-              <p>         @++++++=====                             </p>
-              <p>       ++++++@ =====                              </p>
-              <p>     ++++++   #====                               </p>
-              <p>   +++++@    @====                                </p>
-              <p> @+++@      @====                                 </p>
-              <p>++@        @==.=                                  </p>
-              <p>           == @                                   </p>
-              <p>          ===@                                    </p>
-              <p>         ===                                      </p>
-              <p>        @=                                        </p>
-            </div>
-        </a>
+        <div class="portfolio">
+          <h2 id="section-title">Things I've Built</h2>
+          <div class="pieces">
+            <a href="https://www.joshuaseverud.com/rock-paper-scissors/" target="_blank" type="button" class="card shadow">
+              <div>
+                <h3>Rock Paper Scissors</h3>
+              </div>
+            </a>
+            <a href="https://www.brookstock.net/" target="_blank" type="button" class="card shadow">
+              <div>
+                <h3>Brookstock Minecraft</h3>
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
 
       <div id="footer">
