Fixed relative links on title
Links were not correctly pointing to the index file on content/* pages.
Now they are.

--- a/content/writing/thesis.html
+++ b/content/writing/thesis.html
@@ -17,7 +17,7 @@
   <body>
     <div class="viewport">
       <div id="header">
-        <h1 id="title"><a href="index.html">Joshua Severud</a></h1>
+        <h1 id="title"><a href="../../index.html">Joshua Severud</a></h1>
         <div class="navigation">
           <a href="../../index.html">Home</a>
           <a href="thesis.html">Writing</a>
