--- a/content/resume/cv.html
+++ b/content/resume/cv.html
@@ -16,7 +16,7 @@
   <body>
     <div class="viewport">
       <div id="header">
-        <h1 id="title"><a href="index.html">Joshua Severud</a></h1>
+        <h1 id="title"><a href="../../index.html">Joshua Severud</a></h1>
         <div class="navigation">
           <a href="../../index.html">Home</a>
           <a href="../writing/thesis.html">Writing</a>
