Added iframes to show portfolio.
I don't love this solution. I'd like it better if I could just make an
icon that represents the site and go with that alongside a little
description. This will work for now, but is certainly not permanent.

--- a/content/portfolio/portfolio.html
+++ b/content/portfolio/portfolio.html
@@ -32,11 +32,13 @@
             <a href="https://www.joshuaseverud.com/rock-paper-scissors/" target="_blank" type="button" class="card shadow">
               <div>
                 <h3>Rock Paper Scissors</h3>
+                <iframe src="https://www.joshuaseverud.com/rock-paper-scissors/" title="Rock paper scissors website"></iframe>
               </div>
             </a>
             <a href="https://www.brookstock.net/" target="_blank" type="button" class="card shadow">
               <div>
                 <h3>Brookstock Minecraft</h3>
+                <iframe src="https://www.brookstock.net/" title="Brookstock Minecraft Server website"></iframe>
               </div>
             </a>
           </div>
