Added link to portfolio on other pages

--- a/content/resume/cv.html
+++ b/content/resume/cv.html
@@ -21,6 +21,7 @@
           <a href="../../index.html">Home</a>
           <a href="../writing/thesis.html">Writing</a>
           <a href="cv.html">About</a>
+          <a href="../portfolio/portfolio.html">Web</a>
         </div>
       </div>
     
