--- a/content/writing/thesis.html
+++ b/content/writing/thesis.html
@@ -22,6 +22,7 @@
           <a href="../../index.html">Home</a>
           <a href="thesis.html">Writing</a>
           <a href="../resume/cv.html">About</a>
+          <a href="../portfolio/portfolio.html">Web</a>
         </div>
       </div>
 
