Adjusted style of cards and iframe elements
Now renders better on smaller screens.

--- a/content/portfolio/portfolio.html
+++ b/content/portfolio/portfolio.html
@@ -27,6 +27,7 @@
 
       <div class="article">
         <div class="portfolio">
+          <p>I've been spending some time going through The Odin Project curriculum lately. I've been learning mostly for fun and because I enjoy making things like these. This page links out to the various projects I've worked on while trying to wrap my head around and perfect my skills with these new (to me) technologies.</p>
           <h2 id="section-title">Things I've Built</h2>
           <div class="pieces">
             <a href="https://www.joshuaseverud.com/rock-paper-scissors/" target="_blank" type="button" class="card shadow">
